# Course-Catalog-Information-Aggregator

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
EndNote/: My EndNote Library.enl
EndNote/My EndNote Library.Data/sdb/: sdb.eni
Output/: augusta_university_courses 1.txt  augusta_university_courses.txt  augusta_university_courses_2.txt
Python files/: readme.md  requirements.txt  test.py  testing.py
Python_files/: main.py  readme.md  testing.py
Python_files/Output/: augusta_university_courses3.txt  augusta_university_courses_4.txt
Written Papers/: Acree_Caleb_honors_thesis_prospectus.docx  Automatic Treatment of Catalog Information presentation.pptx  C_ACREE_Honors_Proposal.docx  C_ACREE_Honors_Prospectus.docx  attachment.docx
Written_Papers/: Acree_Caleb_honors_thesis_prospectus.docx  CWE feedback.docx  prospectus.md  prospectus_converted_to_.docx
